# type-that-tune

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  COPYING.md  README.md  copying.md  flake.nix  pyproject.toml
build_tool/: __init__.py
project/: .gitignore  icon.svg.import  icon.webp.import  project.godot
project/art/: default_theme.tres  icon.webp.import  source_code_pro.woff2.import  source_code_pro.woff2.license
project/scenes_and_scripts/: base_level.gd  base_level.tscn  debug_menu.gd  document_viewer.gd  document_viewer.tscn  legal_notices_screen.gd  legal_notices_screen.tscn  level.gd  level.tscn  level_select_screen.gd  level_select_screen.tscn  pause_menu.gd  text_box_for_legal_notices.tscn  time_display.gd  title_screen.gd  title_screen.tscn
project/scenes_and_scripts/autoload/: back_button_helper.gd
project/scenes_and_scripts/level_or_world_select_screens/: world_1_level_select_screen.gd  world_1_level_select_screen.tscn  world_2_level_select_screen.gd  world_2_level_select_screen.tscn  world_select_screen.gd  world_select_screen.tscn
project/scenes_and_scripts/levels/: clowns_tenth_anniversary.gd  clowns_tenth_anniversary.tscn  glorious_octagon_of_destiny.tscn  mcdonalds_countdown.tscn  ronald_mcdonald_insanity.tscn  ronald_mcdonald_insanity.tscn.license  touhou_ran_ran_ru__dokeshi_boso_kuse.tscn  touhou_ran_ran_ru__dokeshi_kyo_hashi_yume_1st_stage.tscn
